# domain_inspector

./: .env  .flake8  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Makefile  README.md  bandit.yaml  config.conf  mypy.ini  pyproject.toml  setup.py
.github/workflows/: ci.yml
domain_inspector/: __init__.py  __main__.py  config.py  settings.py
domain_inspector/core/: __init__.py  domain_service.py
domain_inspector/models/: __init__.py  domain_info.py  domain_owner.py  whois_data.py
domain_inspector/services/: __init__.py  whois_service.py
reports/: junit.xml
tests/: test_main.py  test_services.py
