[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py36", "py37", "py38", "py39", "py310"]

[tool.isort]
profile = "black"
skip = ["build", "dist", ".venv", "migrations", "tests"]

[tool.mypy]
python_version = 3.9
warn_unused_configs = true
warn_return_any = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
exclude = """
    build
    dist
    .venv
    migrations
    tests
"""

[tool.flake8]
max-line-length = 88
exclude = """
    .git
    __pycache__
    build
    dist
    .venv
    .vscode
    .idea
    migrations
"""
extend-ignore = "E203, W503"
max-complexity = 10
select = "B, C, E, F, W, T4, B9"

[tool.bandit]
exclude_dirs = [
    "build",
    "dist",
    ".venv",
    "migrations",
    "tests"
]
skips = [
    "B101"  # Assert statements
]

[tool.poetry]
name = "domain_inspector"
version = "0.1.0"
description = "A tool to fetch and analyze domain information"
authors = ["Kody Gaston <kody.gaston@msn.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kagaston/domain_inspector"
repository = "https://github.com/kagaston/domain_inspector"
keywords = ["domain", "whois", "inspection", "analysis"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pendulum = "3.0.0"
python-dotenv = "1.0.1"
typed-ast = "1.5.5"
click = "^8.0.0"
python-whois = "0.9.4"  # Ensure this is listed


[tool.poetry.dev-dependencies]
pytest = "8.2.2"
pytest-cov = "2.12.1"
flake8 = "7.0.0"
flake8-bugbear = "21.4.3"
mypy = "1.10.0"
black = "24.4.2"
isort = "5.13.2"
bandit = "1.7.0"
pre-commit = "3.7.1"

